ENGG-2734: fix collection not found screen flicker (#2478)

--- a/app/src/features/apiClient/screens/apiClient/components/clientView/components/Collection/collectionView.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/clientView/components/Collection/collectionView.scss
@@ -49,3 +49,7 @@
     }
   }
 }
+
+.collection-view-container__loading {
+  padding: 1rem;
+}
